...
            android:layout_width="match_parent"
            android:layout_height="428dp"
            android:orientation="vertical"
            android:paddingTop="0dp">

            <TextView
                android:id="@+id/textNazwaPrzepisu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="12dp"
                android:layout_marginRight="16dp"
                android:ellipsize="end"
...
                    app:layout_constraintStart_toEndOf="@+id/count"
                    app:layout_constraintTop_toBottomOf="@+id/textView2"
                    app:layout_constraintVertical_bias="0.051"
                    tools:ignore="MissingConstraints" />

                <TextView
                    android:id="@+id/timeText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:ellipsize="end"
                    android:fontFamily="@font/quicksand_regular"
                    android:gravity="center"
...
                    android:singleLine="true"
                    android:text="4 os."
                    android:textColor="?attr/colorSecondaryVariant"
                    android:textSize="14dp" />

                <TextView
                    android:id="@+id/levelText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_marginLeft="38dp"

                    android:ellipsize="end"
                    android:fontFamily="@font/quicksand_regular"
                    android:gravity="center"
                    android:maxLines="2"
                    android:singleLine="true"
                    android:text="Łatwy"
                    android:textColor="?attr/colorSecondaryVariant"
                    android:textSize="14dp" />

            </pl.plantoplate.ui.custom_views.RadioGridGroup>

            <pl.plantoplate.ui.custom_views.RadioGridGroup
...
                    android:textOff="@string/produkty_mleczne"
                    android:textOn="@string/produkty_mleczne"
                    android:textSize="16dp"
                    app:rippleColor="?attr/colorOnPrimaryFixed" />

                <RadioButton
                    android:id="@+id/przepis_button"
                    android:layout_width="120dp"
                    android:layout_height="36dp"
                    android:layout_margin="8dp"
                    android:background="@drawable/state_list_button_recipe_inside"
                    android:button="@null"
                    android:clickable="true"
...
                    android:textSize="16dp"
                    app:rippleColor="?attr/colorOnPrimaryFixed" />

            </pl.plantoplate.ui.custom_views.RadioGridGroup>

            <ImageView
                android:id="@+id/question"

                android:layout_width="34dp"
                android:layout_height="34dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentBottom="true"
                android:layout_gravity="right"
...
                app:layout_constraintTop_toBottomOf="@+id/textView2"
                app:layout_constraintVertical_bias="0.051"
                tools:ignore="MissingConstraints" />


            <ImageView
                android:id="@+id/info"

                android:layout_width="34dp"
                android:layout_height="34dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentBottom="true"
                android:layout_gravity="right"
...
