...
        android:font="@font/quicksand_regular"
        android:fontFamily="@font/quicksand_regular"

        android:iconTint="?attr/colorSecondaryVariant"
        />
    <item
        android:id = "@+id/receipt_long"
        android:title="@string/przepisy"
        android:icon="@drawable/selector_receipt"


        android:font="@font/quicksand_regular"
        android:fontFamily="@font/quicksand_regular"
...
