<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout7"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorOnTertiary">

<!--    <TextView-->
<!--        android:id="@+id/plantoplate"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_alignParentTop="true"-->
<!--        android:layout_alignParentBottom="true"-->
<!--        android:layout_marginTop="70dp"-->

<!--        android:fontFamily="@font/quicksand_semibold"-->

<!--        android:gravity="top"-->
<!--        android:text="@string/plantoplate"-->
<!--        android:textAppearance="@style/plantoplate"-->
<!--        android:textColor="?attr/colorSecondaryVariant"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        app:layout_constraintVertical_bias="0.016" />-->

    <TextView
        android:id="@+id/zmiana_imienia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"

        android:layout_marginTop="140dp"
        android:textSize="22dp"
        android:fontFamily="@font/quicksand_regular"

        android:gravity="top"

        android:text="@string/zmiana_imienia"
        android:textAppearance="@style/rejestracja"
        android:textColor="?attr/colorSecondaryVariant"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/wprowadz_imie"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="236dp"
        android:layout_height="65dp"

        android:layout_marginTop="140dp"
        android:fontFamily="@font/quicksand_regular"

        android:hint="@string/wprowadz_nowe_imie"
        android:textColorHint="?attr/colorSecondaryVariant"

        app:boxBackgroundMode="outline"

        app:boxStrokeColor="?attr/colorTertiary"

        app:hintTextColor="?attr/colorSecondaryVariant"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/zmiana_imienia"
        app:layout_constraintVertical_bias="0.0">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/enterName"
            android:layout_width="236dp"
            android:layout_height="56dp"

            android:fontFamily="@font/quicksand_regular"

            android:maxLines="1"
            android:singleLine="true"

            android:textColor="?attr/colorSecondaryVariant"

            tools:layout_editor_absoluteX="62dp"
            tools:layout_editor_absoluteY="321dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button_zatwierdz"
        android:layout_width="236dp"
        android:layout_height="70dp"

        android:layout_alignParentLeft="true"

        android:layout_alignParentTop="true"

        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="100dp"


        android:backgroundTint="?attr/colorPrimaryVariant"
        android:clickable="true"

        android:fontFamily="@font/quicksand_medium"

        android:text="@string/zatwierdz"

        android:textAllCaps="false"

        android:textColor="?attr/colorSecondaryVariant"
        app:iconPadding="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wprowadz_imie"
        app:layout_constraintVertical_bias="0.0"
        app:rippleColor="?attr/colorPrimaryVariant"
        app:strokeColor="?attr/colorPrimaryVariant"
        app:strokeWidth="1dp" />


</androidx.constraintlayout.widget.ConstraintLayout>
